--- a/ETicaretAkinsoft.WebAPI/ETicaretAkinsoft.WebAPI.csproj
+++ b/ETicaretAkinsoft.WebAPI/ETicaretAkinsoft.WebAPI.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="6.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ETicaretAkinsoft.DataAccess\ETicaretAkinsoft.DataAccess.csproj" />
+    <ProjectReference Include="..\ETicaretAkinsoft.Business\ETicaretAkinsoft.Business.csproj" />
     <ProjectReference Include="..\ETicaretAkinsoft.Entities\ETicaretAkinsoft.Entities.csproj" />
   </ItemGroup>
 
